--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,9 @@
 apply plugin: "com.android.application"
 
 project.ext.vectoricons = [
-    iconFontNames: [ 'MaterialIcons.ttf','Entypo.ttf', 'Feather.ttf', 'MaterialCommunityIcons.ttf', 'Ionicons.ttf' ]  // Name of the font files you want to copy
+    iconFontNames: [ 'MaterialIcons.ttf','Entypo.ttf', 'FontAwesome.ttf', 'Feather.ttf', 'MaterialCommunityIcons.ttf',
+    'Ionicons.ttf' ]
+      // Name of the font files you want to copy
 
 ]
 
