--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/geolocation": "^3.0.5",
     "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
@@ -21,10 +22,13 @@
     "formik": "^2.2.9",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-crop-picker": "^0.38.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-pager-view": "^6.1.4",
-    "react-native-reanimated": "^3.0.0",
+    "react-native-paper": "^5.2.0",
+    "react-native-reanimated": "^3.0.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-tab-view": "^3.5.0",
