--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "4",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/geolocation": "^3.0.5",
     "@react-native-community/hooks": "^3.0.0",
@@ -25,12 +26,16 @@
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-crop-picker": "^0.38.0",
+    "react-native-image-header-scroll-view": "^0.10.3",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.2.0",
     "react-native-reanimated": "^3.0.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-share": "^8.2.1",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.0",
     "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.6",
