--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.5",
     "@react-navigation/native-stack": "^6.9.11",
+    "@types/react-native-onboarding-swiper": "^1.1.4",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/styled-components": "^5.1.26",
     "formik": "^2.2.9",
@@ -28,6 +29,7 @@
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-image-header-scroll-view": "^0.10.3",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.2.0",
     "react-native-reanimated": "^3.0.1",
