--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/geolocation": "^3.0.5",
     "@react-native-community/hooks": "^3.0.0",
+    "@react-native-firebase/app": "^17.4.0",
+    "@react-native-firebase/auth": "^17.4.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.5",
