--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: "com.android.application"
 
 project.ext.vectoricons = [
-    iconFontNames: [ 'MaterialIcons.ttf','Fontisto.ttf', 'FontAwesome5.ttf',    'Entypo.ttf', 'AntDesign.ttf',  'FontAwesome.ttf',
+    iconFontNames: [ 'MaterialIcons.ttf','Fontisto.ttf', 'FontAwesome5_regular.ttf', 'FontAwesome5_brands.ttf',
+    'FontAwesome5_solid.ttf',  'Entypo.ttf', 'AntDesign.ttf',  'FontAwesome.ttf',
     'Feather.ttf',
     'MaterialCommunityIcons.ttf',
     'Ionicons.ttf' ]
