--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.0",
     "react-native-vector-icons": "^9.2.0",
-    "styled-components": "^5.3.6",
+    "styled-components": "^5.3.9",
     "yup": "^1.0.0"
   },
   "devDependencies": {
@@ -75,5 +75,8 @@
       "json",
       "node"
     ]
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
