--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-animatable": "^1.3.3",
+    "react-native-floating-action": "^1.22.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-image-header-scroll-view": "^0.10.3",
