--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/styled-components": "^5.1.26",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-animatable": "^1.3.3",
