--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/firestore": "^17.4.2",
     "@react-native-firebase/storage": "^17.4.2",
     "@react-native-google-signin/google-signin": "^9.0.2",
+    "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.5",
@@ -43,6 +44,7 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-share": "^8.2.1",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.0",
