--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-paper": "^5.2.0",
     "react-native-reanimated": "^3.0.1",
     "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.20.0",
     "react-native-share": "^8.2.1",
     "react-native-skeleton-placeholder": "^5.2.4",
